--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
+    "parser": "babel-eslint",
     "parserOptions":{
-        "ecmaVersion": 2018
+        "ecmaVersion": 2020
     },
     "extends": ["eslint:recommended", "prettier"],
     "env":{
