--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "set DEBUG=app:*&& nodemon index",
-    "start": "NODE_ENV:production node index"
+    "start": "set NODE_ENV=production && node index"
   },
   "keywords": [],
   "author": "",
